git-annex (3.20120106) UNRELEASED; urgency=low

  * Support unescaped repository urls, like git does.

 -- Joey Hess <joeyh@debian.org>  Thu, 05 Jan 2012 14:29:30 -0400

git-annex (3.20120105) unstable; urgency=low

  * Added annex-web-options configuration settings, which can be
    used to provide parameters to whichever of wget or curl git-annex uses
    (depends on which is available, but most of their important options
    suitable for use here are the same).
  * Dotfiles, and files inside dotdirs are not added by "git annex add"
    unless the dotfile or directory is explicitly listed. So "git annex add ."
    will add all untracked files in the current directory except for those in
    dotdirs.
  * Added quickcheck to build dependencies, and fail if test suite cannot be
    built.
  * fsck: Do backend-specific check before checking numcopies is satisfied.
  * Run gpg with --no-tty. Closes: #654721

 -- Joey Hess <joeyh@debian.org>  Thu, 05 Jan 2012 13:44:12 -0400

git-annex (3.20111231) unstable; urgency=low

  * sync: Improved to work well without a central bare repository.
    Thanks to Joachim Breitner.
  * Rather than manually committing, pushing, pulling, merging, and git annex
    merging, we encourage you to give "git annex sync" a try.
  * sync --fast: Selects some of the remotes with the lowest annex.cost
    and syncs those, in addition to any specified at the command line.
  * Union merge now finds the least expensive way to represent the merge.
  * reinject: Add a sanity check for using an annexed file as the source file.
  * Properly handle multiline git config values.
  * Fix the hook special remote, which bitrotted a while ago.
  * map: --fast disables use of dot to display map
  * Test suite improvements. Current top-level test coverage: 75%
  * Improve deletion of files from rsync special remotes. Closes: #652849
  * Add --include, which is the same as --not --exclude.